Fixing z-index styles

--- a/src/render/assets/css/frame.module.css
+++ b/src/render/assets/css/frame.module.css
@@ -5,7 +5,7 @@
 }
 
 .frame {
-    z-index: 3001;
+    z-index: 3010;
     display: flex;
     justify-content: center;
     flex-direction: column;
